--- a/index.html
+++ b/index.html
@@ -283,19 +283,17 @@
     </section>
     <section class="akademie center">
         <h2>AKADEMIE SCHEDULE</h2>
-        <a href="javascript:void(0);"><p>about→</p></a>
-        <div class="akaBannerWrap">  
-        <ul class="akaBanner clearFix">
-            <li class="ak1"><a href="javascript:void(0)"><img src="images/20191022022825_img.jpg" alt=""></a></li>
-            <li class="ak2"><a href="javascript:void(0)"><img src="images/20191022022524_img.jpg" alt=""></a></li>
-            <li class="ak3"><a href="javascript:void(0)"><img src="images/20190524105613_img.jpg" alt=""></a></li>
-            <li class="ak4"><a href="javascript:void(0)"><img src="images/20190422013229_img.jpg" alt=""></a></li>
-        </ul>
-        <ul class="BtnLR clearFix">
-            <li class="btnL"><a href="javascript:void(0)"><img src="images/arrow-left.png" alt=""></a></li>
-            <li class="btnR"><a href="javascript:void(0)"><img src="images/arrow-right.png" alt=""></a></li>
-        </ul>
-    </div> 
+        <a href="#"><p>about →</p></a>
+        <div class="akaBannerWrap">
+            <ul class="akaBanner">
+                <li><a href="#"><img src="images/20191022022825_img.jpg" alt="Akademie 1"></a></li>
+                <li><a href="#"><img src="images/20191022022524_img.jpg" alt="Akademie 2"></a></li>
+                <li><a href="#"><img src="images/20190524105613_img.jpg" alt="Akademie 3"></a></li>
+                <li><a href="#"><img src="images/20190422013229_img.jpg" alt="Akademie 4"></a></li>
+            </ul>
+            <button class="btnL">&lt;</button>
+            <button class="btnR">&gt;</button>
+        </div>
     </section>
     <section class="exhibition center">
         <h2>NIKON EXHIBITION</h2>
